[project]
name = "lutron-integration-workspace-root"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "lutron-integration",
    "lutron-integration-tools",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
lutron-integration-tools = { workspace = true }
lutron-integration = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.14.4",
    "pytest>=8.4.2",
    "mypy>=1.18.2",
]
